[gd_scene load_steps=9 format=2]

[ext_resource path="res://title_screen/Pantalla de titulo.gd" type="Script" id=1]
[ext_resource path="res://title_screen/logos/logo.png" type="Texture" id=2]
[ext_resource path="res://title_screen/botones/Nuevo_juego_boton.tscn" type="PackedScene" id=3]
[ext_resource path="res://title_screen/botones/Opcion_boton.tscn" type="PackedScene" id=4]
[ext_resource path="res://title_screen/botones/Acerca_de_boton.tscn" type="PackedScene" id=5]
[ext_resource path="res://title_screen/fonts/monserrat_24.tres" type="DynamicFont" id=6]
[ext_resource path="res://title_screen/icon.png" type="Texture" id=7]
[ext_resource path="res://title_screen/entrada/entrada.tscn" type="PackedScene" id=8]

[node name="Pantalla de titulo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 488.0
margin_right = -549.0
margin_bottom = -174.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0

[node name="logo_titulo" type="TextureRect" parent="menu"]
margin_right = 1040.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="Fila_central" type="HBoxContainer" parent="menu"]
margin_top = 4.0
margin_right = 1040.0
margin_bottom = 560.0
size_flags_vertical = 3

[node name="botones" type="VBoxContainer" parent="menu/Fila_central"]
margin_right = 507.0
margin_bottom = 556.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 25
alignment = 1

[node name="Nuevo_juego_boton" parent="menu/Fila_central/botones" instance=ExtResource( 3 )]
margin_top = 163.0
margin_right = 507.0
margin_bottom = 223.0
scene_to_load = "res://title_screen/Escenas_juego/Seleccion_nivel.tscn"

[node name="Opcion_boton" parent="menu/Fila_central/botones" instance=ExtResource( 4 )]
margin_top = 248.0
margin_right = 507.0
margin_bottom = 308.0

[node name="Acerca_de_boton" parent="menu/Fila_central/botones" instance=ExtResource( 5 )]
margin_top = 333.0
margin_right = 507.0
margin_bottom = 393.0
scene_to_load = "res://title_screen/Opciones.tscn"

[node name="Vesion" type="Label" parent="menu/Fila_central"]
margin_left = 511.0
margin_top = 275.0
margin_right = 528.0
margin_bottom = 280.0
custom_fonts/font = ExtResource( 6 )
text = "Vesion 1.2.4
6IV11 productions"

[node name="CenterContainer" type="CenterContainer" parent="menu/Fila_central"]
margin_left = 532.0
margin_right = 1040.0
margin_bottom = 556.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="logo" type="TextureRect" parent="menu/Fila_central/CenterContainer"]
margin_left = 94.0
margin_top = 125.0
margin_right = 414.0
margin_bottom = 431.0
texture = ExtResource( 7 )

[node name="entrada" parent="." instance=ExtResource( 8 )]
visible = false
margin_left = -325.0
margin_top = -402.0
margin_right = 272.0
margin_bottom = -161.0

[node name="Fondo" type="AudioStreamPlayer" parent="."]

[connection signal="fade_finished" from="entrada" to="." method="_on_entrada_fade_finished"]
